--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 experiment_code/stim/screenshots/
 experiment_code/others/pRF_vid/
 .ipynb_checkpoints
+.ipynb_checkpoints/*
 */.ipynb_checkpoints/*
